2012-10-10  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL][WK2] Add toolbar buttons to MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=98883

        Reviewed by Kenneth Rohde Christiansen.

        Add toolbar buttons to MiniBrowser to support
        navigation back / forward, refresh and go
        to home page.

        * MiniBrowser/efl/main.c:
        (_Browser_Window):
        (on_back_forward_list_changed):
        (on_back_button_clicked):
        (on_forward_button_clicked):
        (on_refresh_button_clicked):
        (on_home_button_clicked):
        (create_toolbar_button):
        (window_create):

2012-10-10  Andy Estes  <aestes@apple.com>

        Fix the Lion build after r130948.

        * TestWebKitAPI/Tests/WebKit2ObjC/UserContentTest.mm:

2012-10-10  Andy Estes  <aestes@apple.com>

        Speculative build fix for Snow Leopard after r130948.

        * TestWebKitAPI/Tests/WebKit2ObjC/UserContentTest.mm: Pull the
        declaration of backgroundColorQuery out of a block to appease GCC.

2012-10-10  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>

        [WK2][WTR] WebKitTestRunner UI process should be aware of Custom Policy Delegate
        https://bugs.webkit.org/show_bug.cgi?id=95974

        Reviewed by Kenneth Rohde Christiansen.

        Added TestController::decidePolicyForNavigationAction() function as a 'decidePolicyForNavigationAction' WKPagePolicyClient callback
        for WTR UI process. WTR bundle client notifies UI process about Custom Policy Delegate via newly added message,
        so that TestController is aware of whether Custom Policy Delegate as enabled and
        permissive. This data is used then in TestController::decidePolicyForNavigationAction for making policy decision.

        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        (WTR::InjectedBundle::setCustomPolicyDelegate):
        (WTR):
        * WebKitTestRunner/InjectedBundle/InjectedBundle.h:
        (InjectedBundle):