@@ -2,9 +2,6 @@
     "slaves":     [ { "name": "test-slave", "platform": "*" },
 
                   
-                    { "name": "apple-xserve-4", "platform": "mac-snowleopard" },
-                    { "name": "apple-xserve-9", "platform": "mac-snowleopard" },	
-
                     { "name": "apple-macpro-3", "platform": "mac-lion" },
                     { "name": "apple-macpro-4", "platform": "mac-lion" },
                     { "name": "apple-macpro-5", "platform": "mac-lion" },	
@@ -78,15 +75,7 @@
                     { "name": "mips-1", "platform": "qt-mipsel"}
                   ],
 
-    "builders":   [ { "name": "Apple SnowLeopard Release (Build)", "type": "Build", "builddir": "snowleopard-release",
-                      "platform": "mac-snowleopard", "configuration": "release", "architectures": ["x86_64"],
-                      "slavenames": ["apple-xserve-4"]
-                    },
-                    { "name": "Apple SnowLeopard Debug (Build)", "type": "Build", "builddir": "snowleopard-debug",
-                      "platform": "mac-snowleopard", "configuration": "debug", "architectures": ["x86_64"],
-                      "slavenames": ["apple-xserve-9"]
-                    },
-                    { "name": "Apple Lion (Leaks)", "type": "BuildAndTestLeaks", "builddir": "lion-leaks",
+    "builders":   [ { "name": "Apple Lion (Leaks)", "type": "BuildAndTestLeaks", "builddir": "lion-leaks",
                       "platform": "mac-lion", "configuration": "debug", "architectures": ["x86_64"],
                       "slavenames": ["apple-macpro-3"]
                     },
@@ -350,9 +339,6 @@
                                        "Chromium Android Release",
                                        "EFL Linux 64-bit Release", "EFL Linux 64-bit Debug", "EFL Linux 32-bit Release (Build)", "EFL Linux 64-bit Debug WK2",
                                        "WinCairo Release", "WinCE Release (Build)"]
-                    },
-                    { "type": "PlatformSpecificScheduler", "platform": "mac-snowleopard", "branch": "trunk", "treeStableTimer": 45.0, 
-                      "builderNames": ["Apple SnowLeopard Release (Build)", "Apple SnowLeopard Debug (Build)"] 
                     },
                     { "type": "PlatformSpecificScheduler", "platform": "mac-lion", "branch": "trunk", "treeStableTimer": 45.0,
                       "builderNames": ["Apple Lion Release (Build)", "Apple Lion Debug (Build)", "Apple Lion (Leaks)"]
